// # hello.proto
syntax = "proto3";
package RoomStatus;


option csharp_namespace = "PlayCli.ProtoMod";

message Empty {}

message RoomListRequest{
     string requirement =1;
}

message RoomListResponse {
    repeated Room result = 1;
}

message RoomRequest {
    string key = 1;
}

message Room {
    string key = 1;
    string host_id = 2; 
    enum Status {
        ON_START = 0;
        ON_WAIT = 1 ;
        ON_HOST_TURN = 2;
        ON_DUEL_TURN = 3;
        ON_END = 4;
    }
    Status status = 3;
    int32 round = 4;
    int32 cell = 5;
    repeated CellStatus cell_status = 6;
}

message CellStatus{
    string key = 1;
    int32 turn = 2; // turn 1 = host / -1 = duel
    int32 cell_num = 3;
}

service RoomStatus {
    rpc CreateRoom (RoomListRequest) returns (Room);
    rpc GetRoomList(RoomListRequest) returns (RoomListResponse); 
    rpc GetRoomCurrentInfo (RoomRequest) returns (Room);
    rpc GetRoomStream (RoomRequest) returns (stream CellStatus);
    rpc UpdateRoomStatus (CellStatus) returns (Empty);
    rpc DeleteRoom (RoomRequest) returns (Empty);
}